--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-reveal": "^1.2.2",
+    "reveal.js": "^5.1.0",
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
